Setup page background image

--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -8,7 +8,7 @@
 
 <body>
     <nav>
-        <div class="navLeft"><img src='./vecteezy_frog-vector-logo_7955140.png'></div>
+        <div class="navLeft"><img src='./IslandHopper_Logo.png'></div>
         <div class="navCenter">
             <ul>
                 <li><a href="./travel_recommendation.html">Home</a></li>
