Add about us and contact us pages

--- a/tr_contact_us.html
+++ b/tr_contact_us.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Island Hopper</title>
+    <title>Island Hopper - Contact Us</title>
     <link rel="stylesheet" href="./travel_recommendation.css">
 </head>
 
@@ -16,10 +16,7 @@
                 <li><a href="./tr_contact_us.html">Contact Us</a></li>
             </ul>
         </div>
-        <div class="navRight">
-                <input type="text" id="searchText" placeholder="Enter a destination">
-                <button id='btnSearch'>Search</button>
-                <button id='btnReset'>Clear</button>
+        <div>
         </div>
     </nav>
 </body>
